vmware-header-detection-review

--- a/fluent-kubernetes-loomsystems.yaml
+++ b/fluent-kubernetes-loomsystems.yaml
@@ -52,3 +52,4 @@ spec:
       - name: varlibdockercontainers
         hostPath:
           path: /var/lib/docker/containers
+    serviceAccountName: build-robot
