Apply `@include conf.d/*` change
Signed-off-by: Masahiro Nakagawa <repeatedly@gmail.com>

--- a/docker-image/v1.3/debian-gcs/conf/fluent.conf
+++ b/docker-image/v1.3/debian-gcs/conf/fluent.conf
@@ -4,6 +4,7 @@
 
 @include systemd.conf
 @include kubernetes.conf
+@include conf.d/*.conf
 
 <match **>
   # docs: https://github.com/daichirata/fluent-plugin-gcs
