--- a/docker-image/v1.3/debian-s3/conf/fluent.conf
+++ b/docker-image/v1.3/debian-s3/conf/fluent.conf
@@ -4,6 +4,7 @@
 
 @include systemd.conf
 @include kubernetes.conf
+@include conf.d/*.conf
 
 <match **>
   # docs: https://docs.fluentd.org/v0.12/articles/out_s3
