--- a/docker-image/v1.3/debian-cloudwatch/conf/fluent.conf
+++ b/docker-image/v1.3/debian-cloudwatch/conf/fluent.conf
@@ -13,4 +13,5 @@
   auto_create_stream true
   use_tag_as_stream true
   json_handler yajl # To avoid UndefinedConversionError
+  log_rejected_request "#{ENV['LOG_REJECTED_REQUEST']}" # Log rejected request for missing parts
 </match>
