--- a/docker-image/v1.3/debian-cloudwatch/Gemfile
+++ b/docker-image/v1.3/debian-cloudwatch/Gemfile
@@ -5,6 +5,8 @@ source "https://rubygems.org"
 
 gem "fluentd", "1.3.3"
 gem "oj", "3.5.1"
+gem "fluent-plugin-multi-format-parser", "~> 1.0.0"
+gem "fluent-plugin-concat", "~> 2.3.0"
 gem "fluent-plugin-rewrite-tag-filter", "~> 2.1.0"
 gem "aws-sdk-cloudwatchlogs", "~> 1.0"
 gem "fluent-plugin-cloudwatch-logs", "~> 0.7.3"
