Use record_modifier to fix encoding for graylog
Signed-off-by: Zach Rochler <zach.rochler@zapier.com>

--- a/docker-image/v1.3/debian-graylog/conf/fluent.conf
+++ b/docker-image/v1.3/debian-graylog/conf/fluent.conf
@@ -6,6 +6,12 @@
 @include kubernetes.conf
 @include conf.d/*.conf
 
+# The gelf plugin assumes input in utf-8
+<filter **>
+  @type record_modifier
+  char_encoding utf-8
+</filter>
+
 <match **>
    @type gelf
    @id out_graylog
