--- a/docker-image/v1.3/debian-graylog/Gemfile
+++ b/docker-image/v1.3/debian-graylog/Gemfile
@@ -10,6 +10,7 @@ gem "fluent-plugin-concat", "~> 2.3.0"
 gem "fluent-plugin-rewrite-tag-filter", "~> 2.1.0"
 gem "gelf", "3.0.0"
 gem "fluent-plugin-gelf-hs", "~> 1.0.7"
+gem "fluent-plugin-record-modifier", "~> 2.0.0"
 gem "fluent-plugin-kubernetes_metadata_filter", "~> 2.1.4"
 gem "ffi"
 gem "fluent-plugin-systemd", "~> 1.0.1"
