--- a/docker-image/v1.3/debian-kafka/Gemfile
+++ b/docker-image/v1.3/debian-kafka/Gemfile
@@ -7,8 +7,10 @@ gem "fluentd", "1.3.3"
 gem "oj", "3.5.1"
 gem "fluent-plugin-multi-format-parser", "~> 1.0.0"
 gem "fluent-plugin-concat", "~> 2.3.0"
+gem "fluent-plugin-grok-parser", "~> 2.5.0"
 gem "fluent-plugin-rewrite-tag-filter", "~> 2.1.0"
 gem "fluent-plugin-kafka", "~> 0.7.9"
+gem "snappy", "~> 0.0.15"
 gem "fluent-plugin-kubernetes_metadata_filter", "~> 2.1.4"
 gem "ffi"
 gem "fluent-plugin-systemd", "~> 1.0.1"
