--- a/docker-image/v1.3/debian-logzio/Gemfile
+++ b/docker-image/v1.3/debian-logzio/Gemfile
@@ -7,6 +7,7 @@ gem "fluentd", "1.3.3"
 gem "oj", "3.5.1"
 gem "fluent-plugin-multi-format-parser", "~> 1.0.0"
 gem "fluent-plugin-concat", "~> 2.3.0"
+gem "fluent-plugin-grok-parser", "~> 2.5.0"
 gem "fluent-plugin-rewrite-tag-filter", "~> 2.1.0"
 gem "fluent-plugin-logzio", "~> 0.0.18"
 gem "fluent-plugin-kubernetes_metadata_filter", "~> 2.1.4"
