--- a/docker-image/v1.3/debian-kafka/Gemfile
+++ b/docker-image/v1.3/debian-kafka/Gemfile
@@ -8,6 +8,7 @@ gem "oj", "3.5.1"
 gem "fluent-plugin-multi-format-parser", "~> 1.0.0"
 gem "fluent-plugin-concat", "~> 2.3.0"
 gem "fluent-plugin-grok-parser", "~> 2.5.0"
+gem "fluent-plugin-prometheus", "~> 1.3.0"
 gem "fluent-plugin-rewrite-tag-filter", "~> 2.1.0"
 gem "fluent-plugin-kafka", "~> 0.7.9"
 gem "snappy", "~> 0.0.15"
