--- a/docker-image/v1.3/debian-logzio/Dockerfile
+++ b/docker-image/v1.3/debian-logzio/Dockerfile
@@ -34,6 +34,7 @@ COPY Gemfile* /fluentd/
 COPY ./conf/fluent.conf /fluentd/etc/
 COPY ./conf/systemd.conf /fluentd/etc/
 COPY ./conf/kubernetes.conf /fluentd/etc/
+COPY ./conf/prometheus.conf /fluentd/etc/
 RUN touch /fluentd/etc/disable.conf
 
 # Copy plugins
