--- a/docker-image/v0.12/debian-cloudwatch/Gemfile
+++ b/docker-image/v0.12/debian-cloudwatch/Gemfile
@@ -6,6 +6,7 @@ source "https://rubygems.org"
 gem "fluentd", "0.12.43"
 gem "oj", "3.5.1"
 gem "fluent-plugin-secure-forward"
+gem "fluent-plugin-record-modifier"
 gem "fluent-plugin-record-reformer"
 gem "fluent-plugin-rewrite-tag-filter"
 gem "aws-sdk-cloudwatchlogs", "~> 1.0"
