Protocol Environment variable in syslog daemonset
Allows ability to output to TCP or UDP

Signed-off-by: Stuart Howlette <stuh84@vps-shme>

--- a/fluentd-daemonset-syslog.yaml
+++ b/fluentd-daemonset-syslog.yaml
@@ -26,6 +26,8 @@ spec:
             value: "sysloghost"
           - name:  SYSLOG_PORT
             value: "514"
+          - name:  SYSLOG_PROTOCOL
+            value: "tcp"            
         resources:
           limits:
             memory: 200Mi
