Added TCP default to Syslog Protocol

--- a/docker-image/v1.3/debian-syslog/conf/fluent.conf
+++ b/docker-image/v1.3/debian-syslog/conf/fluent.conf
@@ -14,7 +14,7 @@
   port "#{ENV['SYSLOG_PORT']}"
   severity debug
   tag fluentd
-  protocol "#{ENV['SYSLOG_PROTOCOL']}"
+  protocol "#{ENV['SYSLOG_PROTOCOL'] || 'tcp'}" 
   packet_size 65535
   output_data_type ltsv
 </match>
