--- a/docker-image/v1.3/debian-kafka/Gemfile
+++ b/docker-image/v1.3/debian-kafka/Gemfile
@@ -11,6 +11,7 @@ gem "fluent-plugin-grok-parser", "~> 2.5.0"
 gem "fluent-plugin-prometheus", "~> 1.3.0"
 gem "fluent-plugin-rewrite-tag-filter", "~> 2.1.0"
 gem "fluent-plugin-kafka", "~> 0.7.9"
+gem "zookeeper", "~> 1.4.11"
 gem "snappy", "~> 0.0.15"
 gem "fluent-plugin-kubernetes_metadata_filter", "~> 2.1.4"
 gem "ffi"
