--- a/docker-image/v1.3/debian-syslog/conf/fluent.conf
+++ b/docker-image/v1.3/debian-syslog/conf/fluent.conf
@@ -8,14 +8,25 @@
 @include conf.d/*.conf
 
 <match **>
-  @type kubernetes_remote_syslog
+  @type remote_syslog
   @id out_kube_remote_syslog
   host "#{ENV['SYSLOG_HOST']}"
   port "#{ENV['SYSLOG_PORT']}"
   severity debug
-  tag fluentd
+  program fluentd
+  hostname ${kubernetes_host}
+
   protocol "#{ENV['SYSLOG_PROTOCOL'] || 'tcp'}" 
+  tls "#{ENV['SYSLOG_TLS'] || 'false'}"
+  ca_file "#{ENV['SYSLOG_CA_FILE'] || ''}"
+  verify_mode "#{ENV['SYSLOG_VERIFY_MODE'] || ''}"
   packet_size 65535
-  output_data_type ltsv
+
+  <buffer kubernetes_host>
+  </buffer>
+
+  <format>
+    @type ltsv
+  </format>
 </match>
 
