Update fluent-plugin-elasticsearch to v3.5.1
Signed-off-by: Nuru <Nuru@users.noreply.github.com>

--- a/docker-image/v1.4/debian-elasticsearch/conf/fluent.conf
+++ b/docker-image/v1.4/debian-elasticsearch/conf/fluent.conf
@@ -27,12 +27,13 @@
    logstash_format "#{ENV['FLUENT_ELASTICSEARCH_LOGSTASH_FORMAT'] || 'true'}"
    index_name "#{ENV['FLUENT_ELASTICSEARCH_LOGSTASH_INDEX_NAME'] || 'logstash'}"
    type_name "#{ENV['FLUENT_ELASTICSEARCH_LOGSTASH_TYPE_NAME'] || 'fluentd'}"
+   bulk_message_request_threshold "#{ENV['FLUENT_ELASTICSEARCH_BULK_MESSAGE_REQUEST_THRESHOLD'] || '10M'}"
    <buffer>
      flush_thread_count "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_THREAD_COUNT'] || '8'}"
      flush_interval "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_INTERVAL'] || '5s'}"
      chunk_limit_size "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_CHUNK_LIMIT_SIZE'] || '2M'}"
      queue_limit_length "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_QUEUE_LIMIT_LENGTH'] || '32'}"
      retry_max_interval "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_RETRY_MAX_INTERVAL'] || '30'}"
-     retry_forever true
+     retry_forever "#{ENV['FLUENT_ELASTICSEARCH_RETRY_FOREVER'] || 'true'}"
    </buffer>
 </match>
