--- a/docker-image/v1.4/debian-kafka/conf/kubernetes.conf
+++ b/docker-image/v1.4/debian-kafka/conf/kubernetes.conf
@@ -13,7 +13,7 @@
   tag kubernetes.*
   read_from_head true
   <parse>
-    @type json
+    @type json_in_json
     time_format %Y-%m-%dT%H:%M:%S.%NZ
   </parse>
 </source>
