--- a/docker-image/v1.4/debian-gcs/Gemfile
+++ b/docker-image/v1.4/debian-gcs/Gemfile
@@ -9,7 +9,7 @@ gem "fluent-plugin-multi-format-parser", "~> 1.0.0"
 gem "fluent-plugin-concat", "~> 2.3.0"
 gem "fluent-plugin-grok-parser", "~> 2.5.0"
 gem "fluent-plugin-prometheus", "~> 1.3.0"
-gem 'fluent-plugin-json-in-json-2'
+gem 'fluent-plugin-json-in-json-2', ">= 1.0.2"
 gem "fluent-plugin-rewrite-tag-filter", "~> 2.1.0"
 gem "fluent-plugin-gcs", "0.4.0.beta1"
 gem "fluent-plugin-kubernetes_metadata_filter", "~> 2.1.4"
