--- a/codefresh/build.yml
+++ b/codefresh/build.yml
@@ -22,6 +22,7 @@ steps:
     stage: Build
     description: Build geodesic
     image_name: ${{CF_REPO_NAME}}
+    working_directory: docker-image/${{DEBIAN_VERSION}}/debian-${{LOG_SERVICE}}/
     dockerfile: docker-image/${{DEBIAN_VERSION}}/debian-${{LOG_SERVICE}}/Dockerfile
 
   push_image_commit:
