logfmt parser added

--- a/docker-image/v1.4/debian-elasticsearch/Gemfile
+++ b/docker-image/v1.4/debian-elasticsearch/Gemfile
@@ -15,3 +15,4 @@ gem "fluent-plugin-elasticsearch", "~> 3.5.1"
 gem "fluent-plugin-kubernetes_metadata_filter", "~> 2.1.4"
 gem "ffi"
 gem "fluent-plugin-systemd", "~> 1.0.1"
+gem "fluent-plugin-parser-logfmt", "0.0.0"
