Update image version
Signed-off-by: Masahiro Nakagawa <repeatedly@gmail.com>

--- a/docker-image/v1.4/debian-kinesis/conf/fluent.conf
+++ b/docker-image/v1.4/debian-kinesis/conf/fluent.conf
@@ -15,7 +15,7 @@
   include_time_key "#{ENV['FLUENT_KINESIS_STREAMS_INCLUDE_TIME_KEY'] || false}"
   <buffer>
     flush_interval 1
-    chunk_limit_size 1m
+    chunk_limit_size "#{ENV['FLUENT_KINESIS_STREAMS_CHUNK_LIMIT_SIZE'] || '1m'}"
     flush_thread_interval 0.1
     flush_thread_burst_interval 0.01
     flush_thread_count 15
