log_es_400_reason parameter added

--- a/docker-image/v1.4/debian-elasticsearch/conf/fluent.conf
+++ b/docker-image/v1.4/debian-elasticsearch/conf/fluent.conf
@@ -28,6 +28,7 @@
    index_name "#{ENV['FLUENT_ELASTICSEARCH_LOGSTASH_INDEX_NAME'] || 'logstash'}"
    type_name "#{ENV['FLUENT_ELASTICSEARCH_LOGSTASH_TYPE_NAME'] || 'fluentd'}"
    bulk_message_request_threshold "#{ENV['FLUENT_ELASTICSEARCH_BULK_MESSAGE_REQUEST_THRESHOLD'] || '10M'}"
+   log_es_400_reason "#{ENV['FLUENT_ELASTICSEARCH_400_REASON_LOG'] || 'false'}"
    <buffer>
      flush_thread_count "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_THREAD_COUNT'] || '8'}"
      flush_interval "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_INTERVAL'] || '5s'}"
