--- a/deploy/aws/buildspec_build.yml
+++ b/deploy/aws/buildspec_build.yml
@@ -1,6 +1,8 @@
 version: 0.2
 phases:
   install:
+    runtime-versions:
+      docker: 18
     commands:
        - apt install -y make
        - curl -o aws-iam-authenticator https://amazon-eks.s3-us-west-2.amazonaws.com/1.12.7/2019-03-27/bin/linux/amd64/aws-iam-authenticator
