--- a/docker-image/v0.12/alpine-elasticsearch/Gemfile
+++ b/docker-image/v0.12/alpine-elasticsearch/Gemfile
@@ -10,3 +10,4 @@ gem "fluent-plugin-record-reformer"
 gem "fluent-plugin-rewrite-tag-filter"
 gem "fluent-plugin-elasticsearch"
 gem "fluent-plugin-kubernetes_metadata_filter"
+gem "fluent-plugin-color-stripper"
