--- a/docker-image/v1.12/arm64/debian-kafka2/Gemfile
+++ b/docker-image/v1.12/arm64/debian-kafka2/Gemfile
@@ -15,8 +15,9 @@ gem "fluent-plugin-detect-exceptions", "~> 0.0.13"
 gem "fluent-plugin-rewrite-tag-filter", "~> 2.4.0"
 gem "fluent-plugin-parser-cri", "~> 0.1.0"
 gem "rdkafka", "~> 0.7.0"
-gem "fluent-plugin-kafka", "~> 0.12.2"
+gem "fluent-plugin-kafka", "~> 0.16.0"
 gem "fluent-plugin-avro", "~> 1.1.1"
+gem "fluent-plugin-parser-avro", "~> 0.3.1"
 gem "snappy", "~> 0.0.15"
 gem "fluent-plugin-kubernetes_metadata_filter", "~> 2.6.0"
 gem "ffi"
