--- a/fluentd-daemonset-azureblob.yaml
+++ b/fluentd-daemonset-azureblob.yaml
@@ -63,6 +63,9 @@ spec:
         image: fluent/fluentd-kubernetes-daemonset:v1-debian-azureblob
         imagePullPolicy: Always
         env:
+          # See https://github.com/elsesiy/fluent-plugin-azure-storage-append-blob-lts#configuration for all configuration options & combinations
+          - name: AZUREBLOB_AZURE_CLOUD
+            value: "AZUREPUBLICCLOUD"
           - name:  AZUREBLOB_ACCOUNT_NAME
             value: "mystorageaccount"
           # Use AZUREBLOB_ACCOUNT_KEY for access key authorization, AZUREBLOB_SAS_TOKEN for shared access signature authorization, 
@@ -78,9 +81,8 @@ spec:
           - name:  AZUREBLOB_LOG_PATH
             value: "mylogpath"
           # Optional Managed Identity configuration options
-          # See https://github.com/microsoft/fluent-plugin-azure-storage-append-blob#configuration
           - name:  AZUREBLOB_IMDS_API_VERSION
-            value: "2019-08-15"
+            value: "2020-12-01"
           - name:  AZUREBLOB_TOKEN_REFRESH_INTERVAL
             value: "60"
         resources:
