es6: es7: Handle application_name parameters on Elasticsearch images
Signed-off-by: Hiroshi Hatake <cosmo0920.oucc@gmail.com>

--- a/docker-image/v1.12/arm64/debian-elasticsearch6/conf/fluent.conf
+++ b/docker-image/v1.12/arm64/debian-elasticsearch6/conf/fluent.conf
@@ -36,6 +36,7 @@
    template_overwrite "#{ENV['FLUENT_ELASTICSEARCH_TEMPLATE_OVERWRITE'] || use_default}"
    sniffer_class_name "#{ENV['FLUENT_SNIFFER_CLASS_NAME'] || 'Fluent::Plugin::ElasticsearchSimpleSniffer'}"
    request_timeout "#{ENV['FLUENT_ELASTICSEARCH_REQUEST_TIMEOUT'] || '5s'}"
+   application_name "#{ENV['FLUENT_ELASTICSEARCH_APPLICATION_NAME'] || use_default}"
    <buffer>
      flush_thread_count "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_THREAD_COUNT'] || '8'}"
      flush_interval "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_INTERVAL'] || '5s'}"
