change varlibdockercontainer path
in kubernetes 1.19+ the folder /var/lib/docker/ no more exist and the
docker logs are placed in /var/logs/pods folder

Signed-off-by: Andrea Romanello aka rommel FROM (NBROMMEL) <rommelandrea@gmail.com>

--- a/fluentd-daemonset-azureblob.yaml
+++ b/fluentd-daemonset-azureblob.yaml
@@ -104,4 +104,4 @@ spec:
           path: /var/log
       - name: varlibdockercontainers
         hostPath:
-          path: /var/lib/docker/containers
+          path: /var/log/pods
