--- a/docker-image/v1.9/debian-elasticsearch7/conf/kubernetes.conf
+++ b/docker-image/v1.9/debian-elasticsearch7/conf/kubernetes.conf
@@ -7,6 +7,20 @@
 
 <source>
   @type tail
+  @id in_tail_nginx_logs
+  path /var/log/nginx/*.log
+  pos_file /var/log/fluentd-containers.log.pos
+  tag "#{ENV['FLUENT_CONTAINER_TAIL_TAG'] || 'kubernetes.*'}"
+  exclude_path "#{ENV['FLUENT_CONTAINER_TAIL_EXCLUDE_PATH'] || use_default}"
+  read_from_head true
+  <parse>
+    @type "#{ENV['FLUENT_CONTAINER_TAIL_PARSER_TYPE'] || 'json'}"
+    time_format %Y-%m-%dT%H:%M:%S.%NZ
+  </parse>
+</source>
+
+<source>
+  @type tail
   @id in_tail_container_logs
   path /var/log/containers/*.log
   pos_file /var/log/fluentd-containers.log.pos
