Update s3 image and apply recent gems
Bump up from 1.1 to 1.2

debian-s3 s3 parquet compress support
debian-azureblog
debian-elasticsearch7
debian-elasticsearch6
debian-stackdriver
debian-gcs
debian-cloudwatch
debian-kinesis

same as arm64 too.

Signed-off-by: Kentaro Hayashi <hayashi@clear-code.com>

--- a/docker-image/v1.13/debian-s3/Dockerfile
+++ b/docker-image/v1.13/debian-s3/Dockerfile
@@ -13,7 +13,7 @@ ENV GEM_HOME /fluentd/vendor/bundle/ruby/2.6.0
 ENV FLUENTD_DISABLE_BUNDLER_INJECTION 1
 
 COPY Gemfile* /fluentd/
-RUN buildDeps="sudo make gcc g++ libc-dev libffi-dev" \
+RUN buildDeps="sudo make gcc g++ libc-dev libffi-dev curl" \
   runtimeDeps="" \
       && apt-get update \
      && apt-get upgrade -y \
@@ -23,6 +23,10 @@ RUN buildDeps="sudo make gcc g++ libc-dev libffi-dev" \
     && gem install bundler --version 2.2.24 \
     && bundle config silence_root_warning true \
     && bundle install --gemfile=/fluentd/Gemfile --path=/fluentd/vendor/bundle \
+    && curl -sL -o columnify_0.1.0_Linux_x86_64.tar.gz https://github.com/reproio/columnify/releases/download/v0.1.0/columnify_0.1.0_Linux_x86_64.tar.gz \
+    && tar xf columnify_0.1.0_Linux_x86_64.tar.gz \
+    && rm LICENSE README.md columnify_0.1.0_Linux_x86_64.tar.gz \
+    && mv columnify /usr/local/bin/ \
     && SUDO_FORCE_REMOVE=yes \
     apt-get purge -y --auto-remove \
                   -o APT::AutoRemove::RecommendsImportant=false \
