--- a/docker-image/v1.12/oraclelinux-elasticsearch7/Gemfile
+++ b/docker-image/v1.12/oraclelinux-elasticsearch7/Gemfile
@@ -25,3 +25,4 @@ gem "fluent-plugin-dedot_filter", "~> 1.0"
 gem "fluent-plugin-kubernetes_metadata_filter", "~> 2.6.0"
 gem "ffi"
 gem "fluent-plugin-systemd", "~> 1.0.2"
+gem "fluent-plugin-oci-logging", "~> 1.0.2"
