Add 'control-plane' key to DaemonSet toleration.
Signed-off-by: robin.king <inerplat@gmail.com>

--- a/fluentd-daemonset-elasticsearch-rbac.yaml
+++ b/fluentd-daemonset-elasticsearch-rbac.yaml
@@ -57,6 +57,8 @@ spec:
       serviceAccount: fluentd
       serviceAccountName: fluentd
       tolerations:
+      - key: node-role.kubernetes.io/control-plane
+        effect: NoSchedule
       - key: node-role.kubernetes.io/master
         effect: NoSchedule
       containers:
