--- a/fluentd-daemonset-gcs.yaml
+++ b/fluentd-daemonset-gcs.yaml
@@ -14,6 +14,8 @@ spec:
         version: v1
     spec:
       tolerations:
+      - key: node-role.kubernetes.io/control-plane
+        effect: NoSchedule
       - key: node-role.kubernetes.io/master
         effect: NoSchedule
       containers:
