--- a/fluentd-daemonset-loggly-rbac.yaml
+++ b/fluentd-daemonset-loggly-rbac.yaml
@@ -57,6 +57,8 @@ spec:
       serviceAccount: fluentd
       serviceAccountName: fluentd
       tolerations:
+      - key: node-role.kubernetes.io/control-plane
+        effect: NoSchedule
       - key: node-role.kubernetes.io/master
         effect: NoSchedule
       containers:
