--- a/fluentd-daemonset-loggly.yaml
+++ b/fluentd-daemonset-loggly.yaml
@@ -17,6 +17,8 @@ spec:
         version: v1
     spec:
       tolerations:
+      - key: node-role.kubernetes.io/control-plane
+        effect: NoSchedule
       - key: node-role.kubernetes.io/master
         effect: NoSchedule
       containers:
