--- a/fluentd-daemonset-loggly.yaml
+++ b/fluentd-daemonset-loggly.yaml
@@ -10,6 +10,9 @@ metadata:
     k8s-app: fluentd-logging
     version: v1
 spec:
+  selector:
+    matchLabels:
+      k8s-app: fluentd-logging
   template:
     metadata:
       labels:
