--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,12 +1,12 @@
 name: Publish Docker Image
 
-on: [push, pull_request]
-#  push:
-#    branches:
-#      - main
-#    tags:
-#      - v1.*
-#
+on:
+  push:
+    branches:
+      - main
+    tags:
+      - v1.*
+
 env:
   REPOSITORY: ${{ secrets.DOCKER_HUB_ORGS }}/fluentd-kubernetes-daemonset
 jobs:
