--- a/docker-image/v1.17/debian-kafka/Dockerfile
+++ b/docker-image/v1.17/debian-kafka/Dockerfile
@@ -49,6 +49,9 @@ COPY entrypoint.sh /fluentd/entrypoint.sh
 # Environment variables
 ENV FLUENTD_OPT=""
 ENV FLUENTD_CONF="fluent.conf"
+# Override LD_PRELOAD in fluentd docker image
+# Set "/usr/lib/libjemalloc.so.2" if you want to enable jemalloc explicitly
+ENV LD_PRELOAD=""
 
 # Overwrite ENTRYPOINT to run fluentd as root for /var/log / /var/lib
 ENTRYPOINT ["tini", "--", "/fluentd/entrypoint.sh"]
