--- a/docker-image/v1.17/arm64/debian-forward/conf/fluent.conf
+++ b/docker-image/v1.17/arm64/debian-forward/conf/fluent.conf
@@ -12,8 +12,8 @@
   @id out_fwd
   @log_level info
   <server>
-    host "#{ENV['FLUENT_FOWARD_HOST']}"
-    port "#{ENV['FLUENT_FOWARD_PORT']}"
+    host "#{ENV['FLUENT_FORWARD_HOST'] || ENV['FLUENT_FOWARD_HOST']}"
+    port "#{ENV['FLUENT_FORWARD_PORT'] || ENV['FLUENT_FOWARD_PORT']}"
   </server>
   <buffer>
     flush_interval "#{ENV['FLUENT_FORWARD_FLUSH_INTERVAL'] || use_default}"
