--- a/docker-image/v1.17/arm64/debian-papertrail/conf/kubernetes.conf
+++ b/docker-image/v1.17/arm64/debian-papertrail/conf/kubernetes.conf
@@ -59,6 +59,6 @@
     program ${record["kubernetes"]["container_name"]}
     severity info
     facility local0
-    message ${record['log']}
+    message ${record['log'] || record['message']}
   </record>
 </filter>
