github: use arm64 host directly
Signed-off-by: Kentaro Hayashi <hayashi@clear-code.com>

--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -75,15 +75,13 @@ jobs:
           outputs: oci-mediatypes=false
   arm64:
     needs: define-matrix
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
     strategy:
       fail-fast: false
       matrix:
         component: ${{ fromJSON(needs.define-matrix.outputs.components) }}
     steps:
       - uses: actions/checkout@v4
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
