--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -15,6 +15,7 @@ jobs:
         [
         "debian-azureblob",
         "debian-cloudwatch",
+        "debian-datadog",
         "debian-elasticsearch7",
         "debian-elasticsearch8",
         "debian-forward",
